Change some architecture to handle incorrect configuration input

--- a/assets/style.css
+++ b/assets/style.css
@@ -97,5 +97,11 @@ body {
     justify-content: center; /* centre horizontalement l'élément */
 }
 
+.machineNumberInfo {
+    padding:10px;
+    text-align:center;
+}
+
+
 
 
